Fix wrong color code

--- a/css/base.css
+++ b/css/base.css
@@ -786,7 +786,7 @@ body.mini-page {
 }
 
 .message.success {
-	border: 1px #bbee7 solid;
+	border: 1px #bbee77 solid;
 	background-color: #f8fff0;
 	color: #234600;
 }
